# SNMenu

./: .SRCINFO  Cargo.toml  LICENSE  PKGBUILD  README.md  layout  layout.example  style.css
src/: circular_layout.rs  config.rs  main.rs
