[package]
name = "snmenu"
version = "0.3.0"
edition = "2021"
authors = ["Sleep-No-More", "ArtsyMacaw"]
license = "MIT"
description = "SNMenu - A beautiful circular menu for Wayland with customizable buttons"
readme = "README.md"

[dependencies]
gtk = "0.18"
gdk = "0.18"
glib = "0.21.3"
cairo-rs = "0.21.2"
gdk-pixbuf = "0.21.2"
gio = "0.21.2"
rsvg = "0.4.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0.17"
log = "0.4"
env_logger = "0.11"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[[bin]]
name = "snmenu"
path = "src/main.rs"

[features]
strict = []
